--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "gatsby-plugin-sharp": "^3.3.0",
     "gatsby-plugin-sitemap": "^3.3.0",
     "gatsby-source-filesystem": "^3.3.0",
+    "gatsby-theme-blog-core": "^2.1.1-gatsby-v3.13",
+    "gatsby-transformer-remark": "^4.0.0",
     "gatsby-transformer-sharp": "^3.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
