--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "gatsby-transformer-sharp": "^3.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-tsparticles": "^1.26.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
