--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
     "gatsby-plugin-mdx": "^2.3.0",
     "gatsby-plugin-page-creator": "^3.3.0",
     "gatsby-plugin-react-helmet": "^4.3.0",
-    "gatsby-plugin-sharp": "^3.3.0",
+    "gatsby-plugin-sharp": "^3.4.1",
     "gatsby-plugin-sitemap": "^3.3.0",
+    "gatsby-remark-images": "^5.1.0",
     "gatsby-remark-prismjs": "^5.0.0",
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-transformer-remark": "^4.0.0",
