--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -19,6 +19,7 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@tailwindcss/typography": "^0.4.0",
+    "@tailwindui/react": "^0.1.1",
     "gatsby": "^3.2.1",
     "gatsby-plugin-feed": "^3.3.0",
     "gatsby-plugin-google-analytics": "^3.3.0",
