--- a/old/package.json
+++ b/old/package.json
@@ -7,9 +7,6 @@
   "keywords": [
     "gatsby"
   ],
-  "resolutions": {
-    "express-graphq/graphql": "14.4.1"
-  },
   "scripts": {
     "develop": "gatsby develop",
     "start": "gatsby develop",
@@ -22,37 +19,31 @@
     "@mdx-js/mdx": "^1.6.22",
     "@mdx-js/react": "^1.6.22",
     "@tailwindcss/typography": "^0.4.0",
-    "@tailwindui/react": "^0.1.1",
     "gatsby": "^3.2.1",
     "gatsby-plugin-feed": "^3.3.0",
     "gatsby-plugin-google-analytics": "^3.3.0",
     "gatsby-plugin-image": "^1.3.0",
-    "gatsby-plugin-manifest": "^3.7.0",
+    "gatsby-plugin-manifest": "^3.3.0",
     "gatsby-plugin-mdx": "^2.3.0",
     "gatsby-plugin-mdx-frontmatter": "^0.0.4",
     "gatsby-plugin-page-creator": "^3.3.0",
     "gatsby-plugin-react-helmet": "^4.3.0",
-    "gatsby-plugin-sharp": "^3.7.0",
+    "gatsby-plugin-sharp": "^3.4.1",
     "gatsby-plugin-sitemap": "^3.3.0",
     "gatsby-remark-images": "^5.1.0",
-    "gatsby-remark-images-contentful": "^4.4.0",
     "gatsby-remark-prismjs": "^5.0.0",
-    "gatsby-source-contentful": "^5.7.0",
     "gatsby-source-filesystem": "^3.3.0",
     "gatsby-transformer-remark": "^4.1.0",
-    "gatsby-transformer-sharp": "^3.7.0",
-    "gatsby-transformer-sqip": "^3.7.0",
-    "graphql-tools": "^7.0.5",
+    "gatsby-transformer-sharp": "^3.3.0",
     "mdx-utils": "^0.2.0",
     "prism-react-renderer": "^1.2.0",
     "prismjs": "^1.23.0",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-graph-vis": "^1.0.7",
     "react-helmet": "^6.1.0",
     "react-tsparticles": "^1.26.3",
-    "undefined": "file:../..",
-    "uuid": "^8.0.0"
+    "undefined": "file:../.."
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
